Fix side effect of the blurred bg change
In the detail pages the navigation was not showing up because there is
no blurring in those pages. So we need to add this hacky property
telling the component to use a different class in that case.

--- a/client/src/components/auth/style.css
+++ b/client/src/components/auth/style.css
@@ -1,5 +1,5 @@
 section.auth {
-  padding-top: 1rem;
+  padding: 1rem 0 3rem;
 }
 
 section.auth input {
