--- a/client/src/components/menu/style.css
+++ b/client/src/components/menu/style.css
@@ -6,7 +6,7 @@
   overflow-x: scroll;
   padding: 1rem;
   position: relative;
-  top: calc(-45vw + 1rem);
+  top: -10rem;
 }
 
 .collections a {
