--- a/client/src/components/navigation/style.css
+++ b/client/src/components/navigation/style.css
@@ -4,8 +4,11 @@
   display: flex;
   flex-direction: row;
   font-size: 1rem;
+  top: -10rem;
+}
+
+.navigation.collection {
   position: relative;
-  top: -45vw;
 }
 
 .title {
